Add styles to calculator

--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,60 @@
-body {
-  margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+
+.button {
+    display: flex;
+    width: 7vw;
+    height: 6vw;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    margin: 0.5vw
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+.big-button {
+    display: flex;
+    width: 15vw;
+    height: 6vw;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    margin: 0.5vw
+}
+
+.field {
+    display: flex;
+    align-content: end;
+    justify-content: end;
+    background-color: #444;
+    color: rgb(216, 216, 216);
+    height: 5vw;
+    font-size: 30px;
+}
+
+#field-text {
+    margin-right: 10px;
+}
+
+.gray {
+    background-color: gray;
+}
+
+.orange {
+    background-color: orange;
+}
+
+.row {
+    display: flex;
+    width: 30vw;
+}
+
+.table {
+    background-color: #444;
+    width: fit-content;
+    border-radius: 10px;
+    padding: 5px;
+    margin: auto;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
 }
