--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 
+html {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
 .button {
   display: flex;
   width: 7vw;
@@ -55,4 +63,63 @@
   margin: auto;
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ddd;
+  margin: 0;
+  padding: 10px;
+}
+
+.navbar-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  width: 30vw;
+  justify-content: space-between;
+  font-size: 25px;
+}
+
+.navbar-title {
+  font-size: 40px;
+}
+
+.link,
+.link:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.link:hover {
+  text-decoration: none;
+  color: gray;
+}
+
+.separated::before {
+  content: " | ";
+  padding: 0 10px;
+}
+
+.quote {
+  margin-top: 100px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.home-container {
+  margin: 10px;
+}
+
+.calc-container {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.calc-text {
+  width: 50vw;
+  text-align: center;
 }
